dia 9 de dezembro

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="banner-hero">
             <div class="banner-content container">
                 <h1>🐾 ANIM<span class="highlight-text">AIS</span> PERDID<span class="highlight-text">OS</span> GOIÂNIA</h1>
-                <p>Juntos, trazemos a esperança de volta para casa. Uma comunidade que se importa.</p>
+                <p>VIDAS CANINAS IMPORTAM</p>
                 <a href="#anuncios-perdidos" class="btn-primary-cta">Ver Pets Perdidos Agora <i class="fas fa-search"></i></a>
             </div>
         </div>
